Created endpoint to fetch event by id.
